// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RangeTick.svelte > should render as selected 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="true"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      10
    </p>
  </div>
  
</div>
`;

exports[`RangeTick.svelte > should render as selected 2`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      10
    </p>
  </div>
  
</div>
`;

exports[`RangeTick.svelte > should render using value 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      10
    </p>
  </div>
  
</div>
`;

exports[`RangeTick.svelte > should render using value 2`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      20
    </p>
  </div>
  
</div>
`;

exports[`RangeTick.svelte > should render with custom label 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      Custom Label
    </p>
  </div>
  
</div>
`;

exports[`RangeTick.svelte > should render with custom label 2`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      
    </p>
  </div>
  
</div>
`;

exports[`RangeTick.svelte > should render with custom label 3`] = `
<div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="svelte-1n8zkn2"
    data-disabled="false"
    data-range-tick=""
    role="option"
    tabindex="0"
  >
    <div
      class="svelte-1n8zkn2"
      data-tick-bar=""
    />
     
    <p
      class="svelte-1n8zkn2"
      data-tick-label=""
    >
      10
    </p>
  </div>
  
</div>
`;
